bk_ida/gccida/g3/check_asm_stack_operands
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1074:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1074:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1080:4: error: expected ';' after expression
rtx v18; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1080:5: error: use of undeclared identifier 'v18'
rtx v18; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1082:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1082:5: error: use of undeclared identifier 'v20'
rtx v20; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1104:4: error: expected ';' after expression
rtx insna; // [rsp+10h] [rbp-C0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1104:5: error: use of undeclared identifier 'insna'; did you mean 'insn'?
rtx insna; // [rsp+10h] [rbp-C0h] 
    ^~~~~
    insn
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1061:36: note: 'insn' declared here
int  check_asm_stack_operands( rtx insn) 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1111:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1118:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_operands = recog_data_0.n_operands; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1119:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_outputs = recog_data_0.n_operands - asm_operand_n_inputs; 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1127:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1133:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v7 = recog_data_0.operand[v6]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1143:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v6++] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1203:1: error: use of undeclared identifier 'v12'
v12 = recog_data_0.operand[v10]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1203:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v12 = recog_data_0.operand[v10]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1205:17: error: use of undeclared identifier 'v12'
if ( *( _WORD *)v12 != 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1207:10: error: use of undeclared identifier 'v12'
rtuint = v12->fld[0].rtuint; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/reg-stack.c:1234:1: error: use of undeclared identifier 'v12'
v12 = recog_data_0.operand[v10]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/check_asm_stack_operands/src/obj/reg-stack.o] Error 1
